tests/invalid/import_module_class_wrong_arg_count/provider.py
class Model:
    value: int

    def __init__(self, value: int) -> None:
        self.value = value
